# cards-organizing

./: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml
common/: Cargo.toml
common/src/: lib.rs
duckduck/: Cargo.toml
duckduck/src/: lib.rs
src/: common.rs  data.rs  duckduck.rs  lib.rs
tests/: make_list.py  test_make_list.py
