[package]
name = "organizer"
version = "0.1.503"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# "extension-module" tells pyo3 we want to build an extension module (skips linking against libpython.so)
# "abi3-py39" tells pyo3 (and maturin) to build using the stable ABI with minimum Python version 3.9
pyo3 = { version = "0.22.4", features = ["extension-module", "abi3-py39"] }
duckdb = {version = "1.3.2", features = ["bundled"]}

