[project]
name = "organizer"
version = "0.1.5"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "yousufmh60", email = "yosefmahmoud356@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "maturin>=1.9.3",
]

[project.scripts]
organizer = "organizer:main"




[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
